--- a/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/descricaoCurso/descricao-curso.component.html
@@ -2,22 +2,22 @@
   <div class="col-12 d-flex flex-wrap fundoLaranja defineFont"
     [style]="isMobile? 'height: 25.75rem;':'padding-left: 7rem; height: 14.75rem;'">
     <div class="{{isMobile? 'col-12 px-3':'col-8 d-flex flex-wrap'}}">
-      <div class="col-12 pt-4 ">
+      <div class="col-10 pt-4 ">
         <h1><strong class="fontTitulo2 fs-1" style="color: rgb(3, 3, 3);">{{curso.titulo}}</strong></h1>
       </div>
-      <div class="col-12">
-        <!-- <h2><p><b>{{grupoEstudos.titulo}}</b></p></h2> -->
+      <!-- <div class="col-12">
+        <!-- <h2><p><b>{{grupoEstudos.titulo}}</b></p></h2> --
         <h1 *ngIf="curso.tipoCurso != 'CURSO'">
           <b style="color: #e64944;">{{curso.parcelas}}</b><br>
           <small style="font-size:medium;">{{curso.valorFormatado}} à vista </small>
-          <!-- ou {{curso.valorComDesconto}} para os inscritos pelas cotistas</small> -->
+          <!-- ou {{curso.valorComDesconto}} para os inscritos pelas cotistas</small> --
         </h1>
         <h1 *ngIf="curso.tipoCurso == 'CURSO'">
           <b style="color: #e64944;">{{curso.parcelas}}</b><br>
           <small style="font-size:medium;">{{curso.valorFormatado}} à vista</small>
         </h1>
-      </div>
-      <div class="col-12" *ngIf="true">
+      </div> -->
+      <div class="col-2" *ngIf="true">
         <P class="fs-5 formataParagrafos" >
           {{curso.subtitulo}}
         </P>
