--- a/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
+++ b/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
@@ -223,7 +223,7 @@
           </p>
         </div>
 
-        <div class="w-100">
+        <!-- <div class="w-100">
           <h1><strong class="fontTitulo">ADMINISTRADOR</strong></h1>
         </div>
         <div class="{{isMobile? 'w-100 pt-2 d-flex justify-content-center':'w-25'}}">
@@ -241,7 +241,7 @@
             A advocacia o ensinou, na prática, a defesa de direitos como um processo exaustivo, mas basilar da sociedade. Seu interese na defesa da Criança e do Adolescente permeou sua vida acadêmica,
             o que atualmente o engajou a abraçar o ProInf como meio de aplicação das suas aprendizagens, experiências e paixão pelas questões infantojuvenis.
           </p>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
