--- a/cursoADVweb/src/app/area-professor/cursos/curso-editar-adicionar/curso-editar-adicionar.component.html
+++ b/cursoADVweb/src/app/area-professor/cursos/curso-editar-adicionar/curso-editar-adicionar.component.html
@@ -47,6 +47,13 @@
       <!-- <p class="fs-6">Informe seu email e telefone registrados</p> -->
       <form [formGroup]="formularioCurso" class="d-flex flex-wrap">
         <hr class="w-100" />
+        <div class="col-12">
+          <mat-form-field class="w-100 {{isMobile? '':'pe-2'}}">
+            <mat-label>Link do Curso</mat-label>
+            <input matInput formControlName="Link">
+          </mat-form-field>
+        </div>
+
         <div class="{{isMobile? 'col-12':'col-6'}}">
           <mat-form-field class="w-100 {{isMobile? '':'pe-2'}}">
             <mat-label>Cupom</mat-label>
